feat(i18n): Add translation for NEW status in pending products

--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -21,7 +21,8 @@
         "allDocumentsApproved": "All Documents Approved",
         "draft":"Draft",
         "pending":"Pending",
-        "rejected":"Rejected"
+        "rejected":"Rejected",
+        "new":"New"
       },
       "actions": {
         "title": "Actions",
