--- a/app/i18n/locales/tr.json
+++ b/app/i18n/locales/tr.json
@@ -17,7 +17,8 @@
         "allDocumentsApproved": "Tüm Belgeler Onaylı",
         "draft": "Taslak",
         "pending": "Beklemede",
-        "rejected": "Reddedildi"
+        "rejected": "Reddedildi",
+        "new": "Yeni"
       },
       "actions": {
         "title": "İşlemler",
